--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -8,6 +8,12 @@ h1 {
     font-weight: 400;
 }
 
+.icon {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
+
 .digits {
     position: relative;
     font-size: 60px;
