--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -1,3 +1,7 @@
+.text-center {
+    text-align: center;
+}
+
 .timer {
     margin: auto;
 }
@@ -37,6 +41,10 @@ h1 {
     font-size: 12px;
     text-align: center;
     text-transform: uppercase;
+}
+
+.emoji {
+    font-size: 20px;
 }
 
 @media(max-width: 399px) {
